App | Enable translations

--- a/app/index.htm
+++ b/app/index.htm
@@ -3,13 +3,18 @@
 
 <head>
   <meta charset="utf-8">
-  <title>atte</title>
+  <title translate>title</title>
 </head>
 
 <body>
-  <h1>It works!</h1>
+  <h1 translate>header</h1>
   
   <script src="js/lib/angular.min.js"></script>
+  <script src="js/lib/angular-cookies.min.js"></script>
+  <script src="js/lib/angular-translate.min.js"></script>
+  <script src="js/lib/angular-translate-storage-local.min.js"></script>
+  <script src="js/lib/angular-translate-storage-cookie.min.js"></script>
+  <script src="js/lib/angular-translate-loader-static-files.min.js"></script>
   <script src="js/atte.js"></script>
 </body>
 
