--- a/app/index.htm
+++ b/app/index.htm
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1 translate>header</h1>
+  <ng-view></ng-view>
   
   <script src="js/lib/angular.min.js"></script>
   <script src="js/lib/angular-cookies.min.js"></script>
