--- a/app/index.htm
+++ b/app/index.htm
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title translate>title</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
