Decouple fileDialog to a separate library

--- a/app/index.htm
+++ b/app/index.htm
@@ -18,6 +18,8 @@
   <script src="js/lib/angular-translate-storage-local.min.js"></script>
   <script src="js/lib/angular-translate-storage-cookie.min.js"></script>
   <script src="js/lib/angular-translate-loader-static-files.min.js"></script>
+  <script src="js/lib/nw-fileDialog.js"></script>
+  <script src="js/atte.utils.js"></script>
   <script src="js/atte.js"></script>
 </body>
 
