Split app to modules

--- a/app/index.htm
+++ b/app/index.htm
@@ -19,8 +19,13 @@
   <script src="js/lib/angular-translate-storage-cookie.min.js"></script>
   <script src="js/lib/angular-translate-loader-static-files.min.js"></script>
   <script src="js/lib/nw-fileDialog.js"></script>
-  <script src="js/atte.utils.js"></script>
-  <script src="js/atte.js"></script>
+  
+  <script src="js/modules/atte.utils.js"></script>
+  
+  <script src="js/modules/atte.main.js"></script>
+  <script src="js/controllers/main/main.ctrl.js"></script>
+  
+  <script src="js/modules/atte.js"></script>
 </body>
 
 </html>
