--- a/app/index.htm
+++ b/app/index.htm
@@ -20,10 +20,10 @@
   <script src="js/lib/angular-translate-loader-static-files.min.js"></script>
   <script src="js/lib/nw-fileDialog.js"></script>
   
-  <script src="js/modules/atte.utils.js"></script>
+  <script src="js/modules/atte.utils/atte.utils.js"></script>
   
-  <script src="js/modules/atte.main.js"></script>
-  <script src="js/controllers/main/main.ctrl.js"></script>
+  <script src="js/modules/atte.main/atte.main.js"></script>
+  <script src="js/modules/atte.main/ctrls/main.ctrl.js"></script>
   
   <script src="js/modules/atte.js"></script>
 </body>
